# OpenGL-render

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg.json
Doc/: Commit.md  Core.md  DevelopmentGuide.md  ECS.md  ECS_FIX_SUMMARY.md  Primitives.md  RenderPipeline.md  TODO.md  ecs_usage_example.cpp  修复报告_FINAL.md
Doc/Architecture/: Fluid.md  Pipeline.md  Shader.md
Input/: InputSystem.cpp  InputSystem.h
Rendering/Assets/: ModelLoader.cpp
Rendering/Assets/fluid/: FluidSimulator.cpp  FluidSimulator.h  Particle.h
Rendering/Assets/fluid/CPU_process/: Particle.cpp
Rendering/Assets/fluid/GPU_process/: GPU_FluidRender.cpp  GPU_FluidRender.h  GPU_FluidSimulator.cpp  GPU_FluidSimulator.h  GPU_Particle.h
Rendering/Assets/fluid/GPU_process/shaders/: csEpilogue.comp  csPredictAndBuildGrid.comp  fluidCommon.glsl  fluid_render.vert
Rendering/Core/: ResourceManager.cpp  ResourceManager.h  Texture.cpp  Texture.h  Vertex.h
Rendering/ECS/: Component.h  Entity.h  TransformComponent.h
Rendering/Pipeline/: MainRenderThread.cpp  MainRenderThread.h  MainRenderThread_Primitive.cpp  MainRenderThread_Primitive.h  RenderThread_ECS.cpp  RenderThread_ECS.h
Rendering/Primitives/: ObjectConfig.h  ObjectRender.cpp  ObjectRender.h  PointRender.cpp  PointRender.h  RectangleRender.cpp  RectangleRender.h  RenderBuilder.cpp  RenderBuilder.h  TriangleRendering.cpp  TriangleRendering.h
Rendering/Primitives/Ball/: BallRender.cpp  BallRender.h
Rendering/Primitives/Base/: ObjectRender.h  RenderBuilder.h
Rendering/Primitives/Components/: Component.h
Rendering/Primitives/Entity/: CameraEntity.cpp  CameraEntity.h  Entity.h
Rendering/Primitives/Point/: PointRender.h
Rendering/Primitives/Triangle/: TriangleRender.h
Rendering/Primitives/old_primitive_pipeline/Ball/: BallRender.h
Rendering/Primitives/old_primitive_pipeline/Point/: PointRender.cpp  PointRender.h
Rendering/Primitives/old_primitive_pipeline/Triangle/: TriangleRender.cpp  TriangleRender.h
Rendering/Scene/: Camera.cpp  Camera.hpp  Model.cpp  Model.h  Quaternions.cpp  Quaternions.h
Shader/: Shader.cpp  Shader.h  Triangle.frag  Triangle.vert
Shader/Ball/CookTorranceLighting/: CookTorrance.frag  CookTorrance.vert
Shader/Ball/GouraudShading/: GouraudShading.frag  GouraudShading.vert
Shader/Ball/PhongShading/: PhongShading.frag  PhongShading.vert
Shader/Points/: Point.frag  Point.vert
Src/: main.cpp
Src/Core/: CMakeLists.txt  ResourceManager.h  Texture.h  Vertex.h
Src/ECS/: CMakeLists.txt
Src/ECS/Components/: CameraComponent.cpp  CameraComponent.h  Component.cpp  Component.h
Src/ECS/Entity/: Entity.cpp  Entity.h
Src/Input/: CMakeLists.txt  InputSystem.h
Src/Rendering/: CMakeLists.txt
Src/Rendering/Assets/: ModelLoader.h
Src/Rendering/Assets/MixtureModel/: MixtureParticle.cpp  MixtureParticle.h
Src/Rendering/Assets/fluid/CPU_process/: FluidSimulator.cpp  Particle.h
Src/Rendering/Assets/fluid/GPU_process/: GPU_FluidRender.cpp  GPU_FluidRender.h  GPU_FluidSimulator.cpp  GPU_FluidSimulator.h  GPU_Particle.h
Src/Rendering/Assets/fluid/GPU_process/shaders/: csClearGrid.comp  csComputeDeltaAndApply.comp  csComputeLambda.comp  fluid_render.frag  fluid_render.vert
Src/Rendering/Pipeline/: MainRenderThread_Primitive.cpp  MainRenderThread_Primitive.h  RenderThread_ECS.cpp  RenderThread_ECS.h
Src/Rendering/Scene/: Camera.cpp  Camera.hpp  Model.h  Quaternions.cpp  Quaternions.h
Src/Rendering/Shader/: Shader.h
Src/Rendering/old_primitive_pipeline/Ball/: BallRender.cpp  BallRender.h
Src/Rendering/old_primitive_pipeline/Base/: ObjectRender.h  RenderConfig.h
Src/Rendering/old_primitive_pipeline/Point/: PointRender.cpp  PointRender.h
Src/Rendering/old_primitive_pipeline/Triangle/: TriangleRender.cpp  TriangleRender.h
Src/Utils/: CMakeLists.txt  ReadShader.cpp  ReadShader.h  getProgramPath.cpp  getProgramPath.h  log.cpp
unit_test/: camera_test.cpp  ecs_test.cpp
utils/: ReadShader.cpp  ReadShader.h  getProgramPath.cpp  getProgramPath.h  log.cpp
